syntax = "proto3";

message Task {
  int64 task_id = 1;
  string name = 2;
  int64 create_time = 3;
  int64 start_time = 4;
  int64 end_time = 5;
  int32 union_train = 6;
  string edge_nodes = 7;
  string file = 8;
  int64 status = 9;
  int64 recent_running_time = 10;
  int64 last_modified_time = 11;
}

message Response {
  int32 code = 1;
  string message = 2;
}

// python -m grpc_tools.protoc -I . --python_out=. --grpc_python_out=. ./data_manager/gen/data_manager.proto